<?xml version="1.0"?>
<package>
  <name>jaco2_data</name>
  <version>0.0.0</version>
  <description>The jaco2_data package</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>Eigen3</build_depend>
  <run_depend>Eigen3</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
