<?xml version="1.0"?>
<package>
  <name>jaco2_description</name>
  <version>0.0.25</version>
  <description>3D Model and URDF of the Kinova JACO2 Arm. Modified WPI model. </description>


  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>  

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="dekent@gatech.edu">David Kent</author>
  <author email="bpwiselybabu@wpi.edu">Benzun Pious Wisely Babu</author>

  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/jaco_description</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/wpi_jaco/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/wpi_jaco</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
