<?xml version="1.0"?>
<package>
  <name>jaco2_driver</name>
  <version>0.0.0</version>
  <description>The jaco2_driver package</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>jaco2_msgs</build_depend>
  <build_depend>jaco2_data</build_depend>
  <build_depend>jaco2_msgs_conversion</build_depend>
  <build_depend>jaco2_kin_dyn_lib</build_depend>
  <build_depend>Boost</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>jaco2_data</run_depend>
  <run_depend>jaco2_msgs</run_depend>
  <run_depend>jaco2_msgs_conversion</run_depend>
  <run_depend>jaco2_kin_dyn_lib</run_depend>
  <run_depend>Boost</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
