<?xml version="1.0"?>
<package>
  <name>jaco2_kin_dyn_lib</name>
  <version>0.0.0</version>
  <description>The jaco2_kin_dyn_lib package</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>jaco2_msgs</build_depend>
  <build_depend>jaco2_data</build_depend>

  <run_depend>kdl_parser</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>jaco2_msgs</run_depend>
  <run_depend>jaco2_data</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
